fix: tweak color for date markers button in dark mode

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -54,10 +54,6 @@
         .button {
             background: #292929;
             color: #fff;
-            &-selected {
-                background: $primary;
-                color: #fff;
-            }
         }
     }
 
